--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -1,7 +1,6 @@
 ---
-import {type CollectionEntry, getEntryBySlug} from "astro:content"
+import {CollectionEntry, getEntryBySlug} from "astro:content"
 import {Image} from "astro:assets"
-
 
 type Props = {
     post: CollectionEntry<"posts">
