--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -1,5 +1,5 @@
 ---
-import {CollectionEntry, getEntryBySlug} from "astro:content"
+import {type CollectionEntry} from "astro:content"
 import {Image} from "astro:assets"
 
 type Props = {
